[gd_scene load_steps=6 format=2]

[ext_resource path="res://raw_sprites/boss_door.png" type="Texture" id=1]
[ext_resource path="res://scenes/boss_door/BossDoor2.gd" type="Script" id=2]
[ext_resource path="res://scenes/boss_door/DoorSprite.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 48 )

[node name="BossDoor2" type="StaticBody2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="Trigger" type="Area2D" parent="."]
position = Vector2( 0, 48 )
collision_layer = 0
collision_mask = 128

[node name="TriggerHitbox" type="CollisionShape2D" parent="Trigger"]
scale = Vector2( 2, 1 )
shape = SubResource( 1 )

[node name="DoorSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -8, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 96 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 48 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="body_exited" from="Trigger" to="." method="_on_Trigger_body_exited"]
